# epovistka

./: Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: workflow.yml
src/: main.rs
src/handlers/: generate.rs
src/middleware/: security.rs
src/models/: generate.rs
src/routes/: generate.rs  mod.rs  static_files.rs
src/services/: image_generator.rs  mod.rs
static/css/: index.css
static/js/: index.js
templates/: index.html
