[package]
name = "epovistka"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false

[dependencies]
axum = "0.8.6"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "compression-br", "cors", "trace", "set-header"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25.8", features = ["png", "jpeg"] }
rusttype = "0.9"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9"
mime_guess = "2.0.5"
include_dir = "0.7"
http = "1.3.1"
chrono = "0.4.42"
